complex demo added to main examples for release video #2

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ tests_integration_airflow/.db
 # testbench and benchpy
 schema/
 /example/dimension_builder_init.xlsx
+/example/dimension_builder_update.xlsx
